--- a/EntregableBoostrap/estilosCSS/estilosG.css
+++ b/EntregableBoostrap/estilosCSS/estilosG.css
@@ -1,13 +1,15 @@
-.bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-  }
 
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
-  }
+body{
+  background-color:azure !important;
+    
+}
+.container-fluid{
+   
+  background-color:cadetblue !important;
+}
+.btnbtn-outline-success{
+  background-color:darkgreen !important;
+}
+h1{
+  text-align: center;
+}
